operator/pkg/gateway-api/testdata/gateway/listenerset-allowed-namespace-none/input/listenerset-allowed-namespace-none.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: allowed-namespace-none
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: None
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: rejected-none
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: allowed-namespace-none
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-http
      port: 8080
      protocol: HTTP
